# naytrik

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.sh  pyproject.toml  simple_playback.py  simple_record.py  task.py  workflow_config.json
examples/: README.md  basic_recording.py  enhanced_recording.py  parameterized_workflow.py  playback_enhanced.py
naytrik/: __init__.py  cli.py
naytrik/automation/: __init__.py  agent.py  browser.py  playwright_browser.py
naytrik/playback/: __init__.py  element_finder.py  executor.py
naytrik/recording/: __init__.py  recorder.py  selector_generator.py
naytrik/schema/: __init__.py  actions.py  selectors.py  workflow.py
naytrik/storage/: __init__.py  manager.py
runs/: cli_examples.py  create_working_demo.py  demo.py  demo_prompt_recording.py  prompt_recording_examples.py  record_workflow.py  test_model.py
workflows/: metadata.json
workflows/definitions/: tax_workflow_1.json  test_json_workflow.json  testing-1.json  testing_tax_recording.json
